@@ -28,6 +28,10 @@ class reader(object):
 			self.logger.debug("Reading line %d: %s" % (self.lineno, line))
 		return line
 
+	def rewind(self):
+		self.f.seek(0)
+		self.lineno = 0
+
 class node(object):
 	def __init__(self, x, y, z, label='1', color='0'):
 		"Mesh node"
@@ -38,6 +42,12 @@ class node(object):
 		self.color = color
 		if logger.isEnabledFor(logging.DEBUG):
 			logger.debug("found node label=%s (%s,%s,%s) color=%s" % (self.label, self.x, self.y, self.z, self.color))
+
+	def __hash__(self):
+		return hash(self.x) + hash(self.y) + hash(self.z)
+
+	def __eq__(self, that):
+		return self.x == that.x and self.y == that.y and self.z == that.z and self.label == that.label and self.color == that.color
 
 class indexedElement(object):
 	def __init__(self, type, list, label='1', color='0'):
@@ -54,4 +64,43 @@ class element(object):
 		"Mesh element"
 		self.type = type
 		self.list = list
+
+class soup2indexed(object):
+	def __init__(self, soupReader):
+		self.nodes = {}
+		self.elements = soupReader.readElement()
+		counter = 0
+		try:
+			while True:
+				e = self.elements.next()
+				for i in xrange(3):
+					coord = e.list[i]
+					n = node(coord[0], coord[1], coord[2])
+					if (self.nodes.has_key(n)):
+						continue
+					counter += 1
+					self.nodes[n] = counter
+		except StopIteration:
+			pass
+		soupReader.rewind()
+		self.elements = soupReader.readElement()
+
+	def readNode(self):
+		"Gets next node"
+		for n in self.nodes:
+			yield node(n.x, n.y, n.z, str(self.nodes[n]))
+
+	def readElementIndexed(self):
+		"Gets next element."
+		try:
+			while True:
+				e = self.elements.next()
+				list = []
+				for i in xrange(3):
+					coord = e.list[i]
+					n = node(coord[0], coord[1], coord[2])
+					list.append(str(self.nodes[n]))
+				yield indexedElement(e.type, list)
+		except StopIteration:
+			pass
 
