@@ -85,7 +85,7 @@ def normFloat(s):
 def writer(file, reader, string=False):
 	"Reads mesh from a reader and write it into a UNV file"
 	if not reader.indexed:
-		raise RuntimeError, "Cannot convert from non-indexed format to indexed format"
+		reader = generic.soup2indexed(reader)
 	if string:
 		f = file
 	else:
